codepkg/objects/Ward__c.object
<CustomObject>
    <fields>
        <fullName>As_Of__c</fullName>
        <description>Date that this Ward was last created/ boundary set</description>
        <label>As Of</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Wards</relationshipLabel>
        <relationshipName>Wards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Council_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Council Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Wards</relationshipLabel>
        <relationshipName>Wards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ward_Number__c</fullName>
        <label>Ward Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ward</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ward_Number__c</columns>
        <columns>Council_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>